--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                 try {
                     // USE YOUR RAILWAY URL HERE
-                    const response = await fetch('https://YOUR-RAILWAY-APP-URL.up.railway.app/api/download', {
+                  const response = await fetch('https://instavideodownloader-production.up.railway.app/api/download', {
                         method: 'POST',
                         headers: { 'Content-Type': 'application/json' },
                         body: JSON.stringify({ url: url })
